--- a/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
+++ b/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
@@ -1,10 +1,37 @@
-[pytest]  # sections
-;Add default parameters 添加默认参数(windows系统ini文件中不可以有中文，此处只是迫不得已用中文备注)
-addopts = -v -s --alluredir=./results
-;Specify execution path 指定设置执行的目录路径(windows系统ini文件中不可以有中文，此处只是迫不得已用中文备注)
-testpaths = demo1 demo2 check_*
-;ignore some files or directories 忽略某些文件或目录(windows系统ini文件中不可以有中文，此处只是迫不得已用中文备注)
+[pytest]  # [] 代表 sections
+
+;Specify execution path 设置指定执行的目录和文件 --> 注意：当前目录为参考点，下面均与pytest.ini同一目录
+testpaths = ./demo1 ./demo2 check_*
+
+;ignore some files or directories 忽略某些文件或目录
 norecoursedirs = demo3 test_*
 
 
-;Options的key要紧靠窗口左边，value不可靠左，不然会被认为是一个key
+
+; Log switch (true or false)
+log_cli = true
+log_level = error
+; Console log level
+log_cli_level = error
+; Print detailed log, equal to command line plus '-vs' ;Add default parameters 添加默认参数
+addopts = --capture=no
+          -vs
+          --alluredir=../reports
+; Console log format
+log_cli_format = %(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)
+; Console log time format
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+; Log file location (Auto generate log file path)
+log_file = ../logs/test.log
+; Log file level
+log_file_level = info
+; Log file format
+log_file_format = %(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)
+; Log file date format
+log_file_date_format = %Y-%m-%d %H:%M:%S
+
+;【注意】
+    ;1、Options的key要紧靠窗口左边，value不可靠左，不然会被认为是一个key
+    ;2、pytest --help 查看[pytest]这个session下Options所有的key
+    ;3、windows系统ini文件中不可以有中文，此处只是迫不得已用中文备注
+    ;4、运用方式：直接在脚本中 logging.info("打印日志"),需要导入logging模块
