--- a/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
+++ b/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]  # [] 代表 sections
 
 ;Specify execution path 设置指定执行的目录和文件 --> 注意：当前目录为参考点，下面均与pytest.ini同一目录
-testpaths = ./demo1 ./demo2 check_*
+;testpaths = ./demo1 ./demo2 check_*
 
 ;ignore some files or directories 忽略某些文件或目录
 norecoursedirs = demo3 test_*
