--- a/Lesson_22/接口自动化测试/recorded_broadcast/multi_env/hogwarts_multiEnv/pythonJsonObj_to_yml/env.yml
+++ b/Lesson_22/接口自动化测试/recorded_broadcast/multi_env/hogwarts_multiEnv/pythonJsonObj_to_yml/env.yml
@@ -1,3 +1,3 @@
 default: old
-ovreload: new
-testing-studio: {old: httpbin, new: 127.0.0.2}
+override: new
+testing-studio: {new: 127.0.0.1, old: httpsbin}
