--- a/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
+++ b/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
@@ -21,13 +21,13 @@ addopts = --capture=no
 log_cli_format = %(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)
 ; Console log time format
 log_cli_date_format = %Y-%m-%d %H:%M:%S
-; Log file location (Auto generate log file path)
+; Log files location (Auto generate log files path)
 log_file = ../logs/test.log
-; Log file level
+; Log files level
 log_file_level = info
-; Log file format
+; Log files format
 log_file_format = %(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)
-; Log file date format
+; Log files date format
 log_file_date_format = %Y-%m-%d %H:%M:%S
 
 ;【注意】
