--- a/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
+++ b/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
@@ -10,6 +10,7 @@ norecoursedirs = demo3 test_*
 
 ; Log switch (true or false)
 log_cli = true
+;只收集error级别日志
 log_level = error
 ; Console log level
 log_cli_level = error
