--- a/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
+++ b/Lesson_22/python编程语言与框架/录播/Pytest 测试框架/pytest配置文件/pytest.ini
@@ -10,9 +10,9 @@ norecoursedirs = demo3 test_*
 
 ; Log switch (true or false)
 log_cli = true
-; Collect error level logs only
+; "Collect" error level logs only
 log_level = error
-; Console log level
+; [print] Console log level
 log_cli_level = error
 ; Print detailed log, equal to command line plus '-vs' ;Add default parameters 添加默认参数
 addopts = --capture=no
@@ -24,7 +24,7 @@ log_cli_format = %(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 ; Log files location (Auto generate log files path)
 log_file = ../logs/test.log
-; Log files level
+; [print] Log files level
 log_file_level = info
 ; Log files format
 log_file_format = %(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)
