--- a/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/pytest.ini
+++ b/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/pytest.ini
@@ -6,10 +6,10 @@ addopts = -sv --alluredir --clean-alluredir
 ;          --alluredir=../reports
 
 
-testpaths = ./testcases
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
+;testpaths = ./testcases
+;python_files = test_*.py
+;python_classes = Test*
+;python_functions = test_*
 
 
 ;; Log switch (true or false)
