--- a/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/pytest.ini
+++ b/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts = -sv
-          --alluredir ../reports/shop --clean-alluredir
+;          --alluredir ../reports/shop --clean-alluredir
 
 testpaths = ./testcases
 python_files = test_*.py
