--- a/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/conf/setting.ini
+++ b/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/conf/setting.ini
@@ -12,15 +12,29 @@ password=123456
 [excel]
 relative_path = /data/mtxshop_data.xlsx
 sheet_name = 立即购买
-[main]
+
+[base_buyer]
 host = http://www.mtxshop.com:7002
-[login]
+[buyer_login]
 username = mtx0327
 password = fcea920f7412b5da7be0cf42b8c93759
-path = /passport/login
+path_login = /passport/login
 captcha = 1512
-method = post
-
+method_login = post
+uuid = f6597380-4e24-11ed-984b-167610639c7
 [buy_now]
+method_buy = post
+path_buy = /trade/carts/buy
+
+[base_manager]
+host = http://www.mtxshop.com:7004
+[manager_login]
+username = admin
+password = 98afa509d7ac716e9a537688fe02f5cf
+path_login = /admin/systems/admin-users/login
+captcha = 1512
+method_login = get
+uuid = af8a52e0-a2e2-11ed-80b8-df8d6b9ee35f
+[audit]
+path = /admin/goods/batch/audit
 method = post
-path = /trade/carts/buy
