--- a/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/pytest.ini
+++ b/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/pytest.ini
@@ -1,9 +1,12 @@
 [pytest]
 addopts = -sv
-;          --alluredir ../reports/shop --clean-alluredir
+          --alluredir ./reports/shop --clean-alluredir
 
 testpaths = ./testcases
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
+;allure report
+log_format = %(asctime) s [%(filename) s:%(lineno)-4s] [%(levelname) 5s] %(message) s
+log_date_format = %Y-%m-%d %H:%M:%S
