--- a/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/conf/setting.ini
+++ b/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/conf/setting.ini
@@ -14,27 +14,27 @@ relative_path = /data/mtxshop_data.xlsx
 sheet_name = 立即购买
 
 [base_buyer]
-host = http://www.mtxshop.com:7002
+host_base_buyer = http://www.mtxshop.com:7002
 [buyer_login]
-username = mtx0327
-password = fcea920f7412b5da7be0cf42b8c93759
-path_login = /passport/login
+username_buyer_login = mtx0327
+password_buyer_login = fcea920f7412b5da7be0cf42b8c93759
+path_buyer_login = /passport/login
 captcha = 1512
-method_login = post
-uuid = f6597380-4e24-11ed-984b-167610639c7
+method_buyer_login = post
+uuid_buyer_login = f6597380-4e24-11ed-984b-167610639c7
 [buy_now]
 method_buy = post
 path_buy = /trade/carts/buy
 
 [base_manager]
-host = http://www.mtxshop.com:7004
+host_base_manager = http://www.mtxshop.com:7004
 [manager_login]
-username = admin
-password = 98afa509d7ac716e9a537688fe02f5cf
-path_login = /admin/systems/admin-users/login
+username_manager_login = admin
+password_manager_login = 98afa509d7ac716e9a537688fe02f5cf
+path_manager_login = /admin/systems/admin-users/login
 captcha = 1512
-method_login = get
-uuid = af8a52e0-a2e2-11ed-80b8-df8d6b9ee35f
+method_manager_login = get
+uuid_manager_login = af8a52e0-a2e2-11ed-80b8-df8d6b9ee35f
 [audit]
-path = /admin/goods/batch/audit
-method = post
+path_audit = /admin/goods/batch/audit
+method_audit = post
