--- a/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/conf/setting.ini
+++ b/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/conf/setting.ini
@@ -4,10 +4,15 @@ level=info
 filepath = /logs/shopLog.log
 
 [mysql]
-host=127.0.0.1
+host=82.156.74.26
 port=3306
 user=root
-password=123456
+password=Testfan#123
+database=mtxshop_trade
+
+[redis]
+account = 82.156.74.26
+psw = mtx
 
 [excel]
 relative_path = /data/mtxshop_data.xlsx
@@ -25,6 +30,9 @@ uuid_buyer_login = f6597380-4e24-11ed-984b-167610639c7
 [buy_now]
 method_buy = post
 path_buy = /trade/carts/buy
+[buyer_trade]
+path_buyer_trade = /trade/create
+method_buyer_trade = post
 
 [base_manager]
 host_base_manager = http://www.mtxshop.com:7004
