--- a/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/pytest.ini
+++ b/MStudent/autoTest_banXia/apiAutoTest/autoTest_api框架/pytest.ini
@@ -7,6 +7,6 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-;allure report
+;this is config for allure report
 log_format = %(asctime) s [%(filename) s:%(lineno)-4s] [%(levelname) 5s] %(message) s
 log_date_format = %Y-%m-%d %H:%M:%S
