--- a/autoApiTest_shop/conf/common.yml
+++ b/autoApiTest_shop/conf/common.yml
@@ -1,9 +1,3 @@
-# 维护登录用户名，密码等相对比较固定的信息
-# 不加引号就是字符串,加上引号就是整型
-buyerName: mtx0327
-buyerPassword: '1234567'
-managerName: admin
-managerPassword: abc111
-sellerName: leeseller
-sellerPassword: '123456'
-
+buyer: http://www.mtxshop.com:7002
+manager: http://www.mtxshop.com:7004
+seller: http://www.mtxshop.com:7003
