--- a/autoApiTest_shop/conf/common.yml
+++ b/autoApiTest_shop/conf/common.yml
@@ -1,3 +1,4 @@
 buyer: http://www.mtxshop.com:7002
 manager: http://www.mtxshop.com:7004
+manager1: http://www.mtxshop.com:7005
 seller: http://www.mtxshop.com:7003
