--- a/autoApiTest_shop/conf/env_test.yml
+++ b/autoApiTest_shop/conf/env_test.yml
@@ -9,6 +9,7 @@ http:
   buyer: http://www.mtxshop.com:7002
   seller: http://www.mtxshop.com:7003
   manager: http://www.mtxshop.com:7004
+  manager1: http://www.mtxshop.com:7005
 db:
   mxtshop:
     host: 82.156.74.26
