日志收集器

--- a/autoApiTest_shop/conf/setting.ini
+++ b/autoApiTest_shop/conf/setting.ini
@@ -21,12 +21,12 @@ sheet_name = 立即购买
 [base_buyer]
 host_base_buyer = http://www.mtxshop.com:7002
 [buyer_login]
-username_buyer_login = mtx0327
-password_buyer_login = 1234567
+username_buyer_login = leeseller
+password_buyer_login = 123456
 path_buyer_login = /passport/login
 captcha = 1512
 method_buyer_login = post
-uuid_buyer_login = f6597380-4e24-11ed-984b-167610639c7
+uuid_buyer_login = 223f2010-a07a-11ed-8444-79c596dcd329
 [buy_now]
 method_buy = post
 path_buy = /trade/carts/buy
